# mcp_troubleshooter

./: .gitignore  CLAUDE.md  DEVELOPMENT_SETUP_COMPLETE.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  REORGANIZATION_COMPLETE.md  TESTING.md  TEST_COVERAGE_ANALYSIS.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  troubleshooting_mcp.py
.jules/: sentinel.md
config/: claude_desktop_config.example.json
docs/: ARCHITECTURE.md  CHANGELOG.md  EXAMPLES.md  FOLDER_STRUCTURE.md  QUICKSTART.md
src/troubleshooting_mcp/: __init__.py  constants.py  models.py  server.py  utils.py
src/troubleshooting_mcp/tools/: __init__.py  environment_inspect.py  log_reader.py  network_diagnostic.py  process_search.py  resource_monitor.py  safe_command.py  system_info.py
tests/: __init__.py  conftest.py  test_additional_coverage.py  test_character_limits.py  test_constants.py  test_e2e_integration.py  test_edge_cases.py  test_env_security.py  test_environment_security.py  test_error_scenarios.py  test_integration.py  test_json_formats.py  test_log_reader_security.py  test_models.py  test_network_security.py  test_safe_command_security.py  test_security_args.py  test_security_process.py  test_security_vulnerability.py  test_server.py  test_server_extended.py  test_tools.py  test_tools_extended.py  test_utils.py  test_utils_extended.py
